--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,78 +1,99 @@
 body {
-  position: relative;
-  margin: 5px;
-  padding-bottom: 6rem;
-  min-height: 100%;
-}
-
-.box {
-	padding: 5px 0px;
+    position: relative;
+    margin: 5px;
+    padding-bottom: 6rem;
 }
 
 p {
-	font-family: "Courier", Times, serif;
-	font-size: 16px;
-	color: black;
-	margin: 0px 0px;
-}
-
-img {
-	margin: 5px 0px;
-}
-
-div.header {
-	background-color: rgb(125,125,125);
-	font-family: 'Impact', sans-serif;   
-	font-size: 36px;
-	line-height: 42px;
-	text-transform: uppercase;
-	text-shadow: 0 2px grey, 0 3px grey;
-	text-transform: uppercase;
-	background-color: rgb(160,160,160);
-	color: #343434;
-	font-size: 38px;
-	text-align: center;
-	margin: 5px 0px;
-	padding: 5px;
-}
-
-ul {
-    list-style-type: none;
+    font-family: "Courier", Times, serif;
+    font-size: 16px;
+    color: black;
     margin: 0px 0px;
+}
+
+img.boxed {
+    margin: 10px 0px;
+    box-shadow: 5px 5px 5px grey;
+}
+/*footer { display:table; margin:0 auto; }
+  footer li { display:table-cell; padding: 0px 10px; }*/
+
+ul.boxheader{
+    list-style-type: none; /* Removes list button */
+    margin: 10px 0px;
     padding: 0;
     overflow: hidden;
     background-color: #333;
 }
 
-li {
+li a.boxheader {
     float: left;
-	font-size: 16px;
-	width: 250px;
-}
-
-li a {
+    font-size: 16px;
+    width: 250px;
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
+    text-shadow: 2px 2px #000000;
     text-decoration: none;
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+li a.boxheader:hover {
     background-color: #111;
 }
 
-.active {
-    background-color: #4CAF50;
+h1 {
+    font-family: 'Courier', Times, serif;
+    margin: 10px;
+}
+
+.header {
+    background-color: rgb(125,125,125);
+    font-family: 'Impact', sans-serif;
+    font-size: 36px;
+    line-height: 42px;
+    text-transform: uppercase;
+    text-shadow: 0px 2px grey;
+    background-color: rgb(160,160,160);
+    border-bottom: 2px solid;
+    border-color: rgb(130, 130, 130);
+    color: #343434;
+    font-size: 38px;
+    text-align: center;
+    margin: 0px 0px;
+    padding: 5px;
 }
 
 .footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 5px;
-  background-color: #efefef;
-  text-align: center;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+    background-color: #efefef;
+    text-align: center;
+}
+
+.centerbox {
+    padding: 10px 0px;
+    text-align: center;
+}
+
+.active {
+    background-color: #088A08;
+}
+
+.table {
+    display: table;   /* Allow the centering to work */
+    margin: 0 auto;
+}
+
+ul.horizontal-list {
+    list-style: none;
+    padding-top: 20px;
+}
+
+ul.horizontal-list li {
+    display: inline;
 }
